<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:checkableBehavior="none">
        <item
            android:icon="@drawable/ic_person"
            android:title="@string/title_profile" />
        <item
            android:id="@+id/nav_booking"
            android:icon="@drawable/ic_history"
            android:title="@string/title_history" />
        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/ic_notification"
            android:title="@string/title_notification" />
        <item
            android:id="@+id/nav_payment"
            android:icon="@drawable/ic_credit_card"
            android:title="@string/title_payment" />
    </group>

    <group
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help"
            android:title="@string/title_help" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/title_settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info"
            android:title="@string/title_about" />
        <item
            android:icon="@drawable/ic_logout"
            android:title="@string/title_log_out" />
    </group>
</menu>